@@ -1,3 +1,8 @@
+2007-03-03  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Disable Canon fast directory retrieval,
+	  since it reportedly fails with the Canon PowerShot A430.
+
 2007-02-27  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: If we have a Canon USB device, but with
